# qt-taxing

./: .gitignore  CMakeLists.txt  README.md
cpp-files/: logindialog.cpp  main.cpp  managementdialog.cpp  questioning.cpp  taxsystem.cpp
data/: logins.json  users.json
design-files/: logindialog.ui  managementdialog.ui  questioning.ui  taxsystem.ui
header-files/: logindialog.h  managementdialog.h  questioning.h  taxsystem.h
